--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-pandas 
-streamlit 
-plotly_express 
-requests 
-mtplotlib 
-seaborn
+numpy==1.23.1
+pandas==1.4.3
+plotly_express==0.4.1
+requests==2.28.1
+streamlit==1.12.2
